customer BEM done

--- a/index.html
+++ b/index.html
@@ -228,42 +228,42 @@
             </ul>
             </div>
         </section>
-        <section class="section our-customers-section">
+        <section class="section customers">
             <div class="container">
-                <h2 class="customers-title">Постоянные клиенты</h2>
+                <h2 class="customers__title">Постоянные клиенты</h2>
                 <ul class="list customers-list">
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="41" height="47">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="41" height="47">
                             <use href="./images/icons.svg#group-one"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="40" height="52">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="40" height="52">
                             <use href="./images/icons.svg#group-two"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="44" height="42">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="44" height="42">
                             <use href="./images/icons.svg#group-three"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="85" height="41">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="85" height="41">
                             <use href="./images/icons.svg#group-four"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="63" height="46">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="63" height="46">
                             <use href="./images/icons.svg#group-five"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="customer-item"><a class="link customer-link" href="">
-                        <svg class="customer-icon" width="94" height="43">
+                    <li class="customers-list__item"><a class="link customer-item__link" href="">
+                        <svg class="customer-item__icon" width="94" height="43">
                             <use href="./images/icons.svg#group-six"></use>
                         </svg>
                     </a>
