features BEM done

--- a/index.html
+++ b/index.html
@@ -43,45 +43,45 @@
             <button type="button" class="hero-section-btn" data-modal-open>Заказать услугу</button>
         </div>
         </section>
-        <section class="section features-section">
+        <section class="section features">
             <div class="container">
-            <h2 class="features-title visually-hidden">Особенности</h2>
+            <h2 class="features__title visually-hidden">Особенности</h2>
             <ul class="list features-list">
                 <li class="features-item">
-                    <div class="feature-icon-container">
-                    <svg class="feature-icon" width="70" height="70">
+                    <div class="features__icon-container">
+                    <svg class="feature-item__icon" width="70" height="70">
                         <use href="./images/icons.svg#antenna"></use>
                     </svg>
                     </div>
-                    <h3 class="features-subtitle">Внимание к деталям</h3>
-                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-item__title">Внимание к деталям</h3>
+                    <p class="features-item__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="features-item">
-                    <div class="feature-icon-container">
-                        <svg class="feature-icon" width="70" height="70">
+                    <div class="features__icon-container">
+                        <svg class="feature-item__icon" width="70" height="70">
                             <use href="./images/icons.svg#clock"></use>
                         </svg>
                         </div>
-                    <h3 class="features-subtitle">Пунктуальность</h3>
-                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-item__title">Пунктуальность</h3>
+                    <p class="features-item__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="features-item">
-                    <div class="feature-icon-container">
-                        <svg class="feature-icon" width="70" height="70">
+                    <div class="features__icon-container">
+                        <svg class="feature-item__icon" width="70" height="70">
                             <use href="./images/icons.svg#diagram"></use>
                         </svg>
                         </div>
-                    <h3 class="features-subtitle">Планирование</h3>
-                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="features-item__title">Планирование</h3>
+                    <p class="features-item__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="features-item">
-                    <div class="feature-icon-container">
-                        <svg class="feature-icon" width="70" height="70">
+                    <div class="features__icon-container">
+                        <svg class="feature-item__icon" width="70" height="70">
                             <use href="./images/icons.svg#astronaut"></use>
                         </svg>
                         </div>
-                    <h3 class="features-subtitle">Современные технологии</h3>
-                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-item__title">Современные технологии</h3>
+                    <p class="features-item__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </div>
