--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
                     <use href="./images/icons.svg#close-btn"></use>
                 </svg>
             </button>
-            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
             <form action="#" class="modal-form">
-                <div class="form-field">
-                    <label for="user-name" class="input-label">Имя</label>
-                    <div class="modal-input-wrap">
+                <div class="modal__form-field">
+                    <label for="user-name" class="input__label">Имя</label>
+                    <div class="modal__input-wrap">
                     <input type="text"
                     name="user-name"
-                    class="modal-input"
+                    class="modal__input"
                     required
                     title="Имя"
                     id="user-name">
@@ -349,12 +349,12 @@
                     </svg>
                     </div>
                 </div>
-                <div class="form-field">
-                    <label for="user-tel" class="input-label">Телефон</label>
-                    <div class="modal-input-wrap">
+                <div class="modal__form-field">
+                    <label for="user-tel" class="input__label">Телефон</label>
+                    <div class="modal__input-wrap">
                     <input type="tel"
                     name="user-tel"
-                    class="modal-input"
+                    class="modal__input"
                     required
                     title="Телефон"
                     id="user-tel">
@@ -363,12 +363,12 @@
                     </svg>
                     </div>
                 </div>
-                <div class="form-field">
-                    <label for="user-email" class="input-label">Почта</label>
-                    <div class="modal-input-wrap">
+                <div class="modal__form-field">
+                    <label for="user-email" class="input__label">Почта</label>
+                    <div class="modal__input-wrap">
                     <input type="email"
                     name="user-email"
-                    class="modal-input"
+                    class="modal__input"
                     required
                     title="Почта"
                     id="user-email">
@@ -377,22 +377,22 @@
                     </svg>
                     </div>
                 </div>
-                <div class="comment-field">
-                    <label for="modal-comment" class="input-label">Комменарий</label>
+                <div class="modal__comment-field">
+                    <label for="modal-comment" class="input__label">Комменарий</label>
                     <textarea name="modal-comment"
-                    class="modal-comment-area"
+                    class="modal__comment-area"
                     id="modal-comment"
                     placeholder="Введите текст"></textarea>
                 </div>
-                <div class="modal-checkbox-field">
-                    <input type="checkbox" name="policy" id="modal-check" class="modal-check visually-hidden">
-                    <label for="modal-check" class="modal-check-text"><span>
-                        <svg class="icon-check" width="16" height="15">
+                <div class="modal__checkbox-field">
+                    <input type="checkbox" name="policy" id="modal-check" class="modal__checkbox visually-hidden">
+                    <label for="modal-check" class="modal__checkbox-text"><span>
+                        <svg class="checkbox-icon" width="16" height="15">
                             <use href="./images/icons.svg#check"></use>
                         </svg>
-                    </span>Соглашаюсь с рассылкой и принимаю&nbsp;<a href="" class="link terms-link">Условия договора</a></label>
+                    </span>Соглашаюсь с рассылкой и принимаю&nbsp;<a href="" class="link checkbox__terms">Условия договора</a></label>
                 </div>
-                <button type="submit" class="btn modal-submit-btn">Отправить</button>
+                <button type="submit" class="btn modal__submit-button">Отправить</button>
             </form>
         </div>
     </div>
