--- a/portfolio.html
+++ b/portfolio.html
@@ -179,59 +179,59 @@
         </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-container">
-            <div class="footer-adress">
-                <a href="./index.html" class="link footer-logo-link logo" lang="en">Web<span
-                        class="logo-footer">Studio</span></a>
-                <address>
-                    <ul class="list footer-contacts-list">
-                        <li class="footer-contacts-item-adress">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li class="footer-contacts-item"><a href="mailto:info@devstudio.com"
-                                class="contacts-link-footer">info@devstudio.com</a></li>
-                        <li class="footer-contacts-item"><a href="tel:+380961111111" class="contacts-link-footer">+38 096
-                                111 11 11</a></li>
+        <footer class="footer">
+            <div class="container footer__wrap">
+                <div class="footer-contacts__wrap">
+                    <a href="./index.html" class="link logo footer-logo" lang="en">Web<span
+                            class="footer-logo__right">Studio</span></a>
+                    <address>
+                        <ul class="list footer-contacts-list">
+                            <li class="footer-contacts__item-address">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="footer-contacts__item"><a href="mailto:info@devstudio.com"
+                                    class="contacts-link-footer">info@devstudio.com</a></li>
+                            <li class="footer-contacts__item"><a href="tel:+380961111111" class="contacts-link-footer">+38 096
+                                    111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="join-us">
+                    <p class="join-us__text">ПРИСОЕДИНЯЙТЕСЬ</p>
+                    <ul class="list join-us-list">
+                        <li class="join-us__item"><a class="join-us__link inst" href="">
+                                <svg class="join-us__icon" width="20" height="20">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li class="join-us__item"><a class="join-us__link twit" href="">
+                                <svg class="join-us__icon" width="20" height="20">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li class="join-us__item"><a class="join-us__link face" href="">
+                                <svg class="join-us__icon" width="20" height="20">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li class="join-us__item"><a class="join-us__link linkedin" href="">
+                                <svg class="join-us__icon" width="20" height="20">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
                     </ul>
-                </address>
+                </div>
+                <div class="subscribe">
+                    <p class="subscribe__title">Подпишитесь на рассылку</p>
+                    <form action="#" class="subscribe-form">
+                        <input type="email" name="subscribe-user-email" class="subscribe-input" id="subscribe-user-email"
+                            placeholder="E-mail" required>
+                        <button type="submit" class="button subscribe-button">Подписаться <svg class="sub-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#telegram"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-            <div class="join-container">
-                <p class="join-phrase">ПРИСОЕДИНЯЙТЕСЬ</p>
-                <ul class="list join-list">
-                    <li class="join-links-item"><a class="join-link inst" href="">
-                            <svg class="join-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a></li>
-                    <li class="join-links-item"><a class="join-link twit" href="">
-                            <svg class="join-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a></li>
-                    <li class="join-links-item"><a class="join-link face" href="">
-                            <svg class="join-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a></li>
-                    <li class="join-links-item"><a class="join-link linkedin" href="">
-                            <svg class="join-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a></li>
-                </ul>
-            </div>
-            <div class="subscribe-container">
-                <p class="footer-subscribe-title">Подпишитесь на рассылку</p>
-                <form action="#" class="footer-form">
-                    <input type="email" name="footer-user-email" class="footer-input" id="footer-user-email"
-                        placeholder="E-mail" required>
-                    <button type="submit" class="button footer-button">Подписаться <svg class="sub-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#telegram"></use>
-                        </svg>
-                    </button>
-                </form>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
