header BEM done

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,26 +14,28 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container">
-        <nav class="nav">
-            <a href="./index.html" class="link header-logo" lang="en">Web<span class="r-logo-header">Studio</span></a>
-            <ul class="list nav-list">
-                <li class="nav-item"><a href="./index.html" class="nav-link nav-link">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="nav-link-current">Портфолио</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
-            </ul>
-        </nav>
-            <ul class="list contacts-list">
-                <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">
-                    <svg class="contacts-icon" width="16" height="12">
-                        <use href="./images/icons.svg#envelope"></use>
-                    </svg>
-                    info@devstudio.com</a></li>
-                <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link">
-                    <svg class="contacts-icon" width="10" height="16">
-                        <use href="./images/icons.svg#smartphone"></use>
-                    </svg>
-                    +38 096 111 11 11</a></li>
+        <div class="container header-wrap">
+            <nav class="nav">
+                <a href="./index.html" class="link header-logo" lang="en">Web<span
+                        class="header-logo__right">Studio</span></a>
+                <ul class="list nav-list">
+                    <li class="nav__item"><a href="./index.html" class="nav__item-link">Студия</a>
+                    </li>
+                    <li class="nav__item"><a href="./portfolio.html" class="nav__item-link nav__item-link-current">Портфолио</a></li>
+                    <li class="nav__item"><a href="" class="nav__item-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="list header-contacts-list">
+                <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts-item__link">
+                        <svg class="contacts-icon" width="16" height="12">
+                            <use href="./images/icons.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com</a></li>
+                <li class="contacts__item"><a href="tel:+380961111111" class="contacts-item__link">
+                        <svg class="contacts-icon" width="10" height="16">
+                            <use href="./images/icons.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
