--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
     </header>
     <main>
-        <section class="section hero-section">
+        <section class="section hero">
         <div class="container">
-            <h1 class="hero-section-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-section-btn" data-modal-open>Заказать услугу</button>
+            <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero__order-btn" data-modal-open>Заказать услугу</button>
         </div>
         </section>
         <section class="section features">
