--- a/index.html
+++ b/index.html
@@ -105,123 +105,123 @@
             </ul>
             </div>
         </section>
-        <section class="section our-team-section">
+        <section class="section team">
             <div class="container">
-            <h2 class="our-team-title">Наша команда</h2>
-            <ul class="list our-team-list">
-                <li class="our-team-item">
-                    <img class="our-team-item-img" src="./images/ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270">
-                    <div class="team-mate-info">
-                    <h3 class="our-team-member">Игорь Демьяненко</h3>
-                    <p class="our-team-position" lang="en">Product Designer</p>
-                    <ul class="list social-links-list">
-                        <li class="social-links-item"><a class="social-link inst" href="">
-                            <svg class="social-link-icon" width="20" height="20">
+            <h2 class="team__title">Наша команда</h2>
+            <ul class="list team-list">
+                <li class="team__item">
+                    <img class="team__item-img" src="./images/ihor-demyanenko.jpg" alt="Игорь Демьяненко" width="270">
+                    <div class="team__item-info">
+                    <h3 class="team__item-title">Игорь Демьяненко</h3>
+                    <p class="team__item-text" lang="en">Product Designer</p>
+                    <ul class="list team__socials-list">
+                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a></li>
-                        <li class="social-links-item"><a class="social-link twit" href="">
-                            <svg class="social-link-icon" width="20" height="20">
+                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a></li>
-                        <li class="social-links-item"><a class="social-link face" href="">
-                            <svg class="social-link-icon" width="20" height="20">
+                        <li class="socials__item"><a class="socials__item-link face" href="">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a></li>
-                        <li class="social-links-item"><a class="social-link linkedin" href="">
-                            <svg class="social-link-icon" width="20" height="20">
+                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                            <svg class="social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a></li>
                     </ul>
                     </div>
                 </li>
-                <li class="our-team-item">
-                    <img class="our-team-item-img" src="./images/olha-repina.jpg" alt="Ольга Репина" width="270">
-                    <div class="team-mate-info">
-                    <h3 class="our-team-member">Ольга Репина</h3>
-                    <p class="our-team-position" lang="en">Frontend Developer</p>
-                    <ul class="list social-links-list">
-                        <li class="social-links-item"><a class="social-link inst" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link twit" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link face" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link linkedin" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a></li>
+                <li class="team__item">
+                    <img class="team__item-img" src="./images/olha-repina.jpg" alt="Ольга Репина" width="270">
+                    <div class="team__item-info">
+                    <h3 class="team__item-title">Ольга Репина</h3>
+                    <p class="team__item-text" lang="en">Frontend Developer</p>
+                    <ul class="list team__socials-list">
+                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link face" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
                     </ul>
                     </div>
                 </li>
-                <li class="our-team-item">
-                    <img class="our-team-item-img" src="./images/nikolai-tarasov.jpg" alt="Николай Тарасов" width="270">
-                    <div class="team-mate-info">
-                    <h3 class="our-team-member">Николай Тарасов</h3>
-                    <p class="our-team-position" lang="en">Marketing</p>
-                    <ul class="list social-links-list">
-                        <li class="social-links-item"><a class="social-link inst" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link twit" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link face" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link linkedin" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a></li>
+                <li class="team__item">
+                    <img class="team__item-img" src="./images/nikolai-tarasov.jpg" alt="Николай Тарасов" width="270">
+                    <div class="team__item-info">
+                    <h3 class="team__item-title">Николай Тарасов</h3>
+                    <p class="team__item-text" lang="en">Marketing</p>
+                    <ul class="list team__socials-list">
+                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link face" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
                     </ul>
                     </div>
                 </li>
-                <li class="our-team-item">
-                    <img class="our-team-item-img" src="./images/mikhail-yermakov.jpg" alt="Михаил Ермаков" width="270">
-                    <div class="team-mate-info">
-                    <h3 class="our-team-member">Михаил Ермаков</h3>
-                    <p class="our-team-position" lang="en">UI Designer</p>
-                    <ul class="list social-links-list">
-                        <li class="social-links-item"><a class="social-link inst" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link twit" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link face" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a></li>
-                        <li class="social-links-item"><a class="social-link linkedin" href="">
-                            <svg class="social-link-icon" width="20" height="20">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a></li>
+                <li class="team__item">
+                    <img class="team__item-img" src="./images/mikhail-yermakov.jpg" alt="Михаил Ермаков" width="270">
+                    <div class="team__item-info">
+                    <h3 class="team__item-title">Михаил Ермаков</h3>
+                    <p class="team__item-text" lang="en">UI Designer</p>
+                    <ul class="list team__socials-list">
+                        <li class="socials__item"><a class="socials__item-link inst" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link twit" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link face" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li class="socials__item"><a class="socials__item-link linkedin" href="">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a></li>
                     </ul>
                     </div>
                 </li>
