our-work BEM done

--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
             </ul>
         </div>
         </section>
-        <section class="section our-work-section">
+        <section class="section our-work">
             <div class="container">
-            <h2 class="our-work-title">Чем мы занимаемся</h2>
+            <h2 class="our-work__title">Чем мы занимаемся</h2>
             <ul class="list our-work-list">
-                <li class="our-work-item">
+                <li class="our-work-list__item">
                     <img src="./images/our-work-1.jpg" alt="Верстка" width="370">
-                    <p class="our-work-overlay">Десктопные приложения</p>
+                    <p class="our-work__item-overlay">Десктопные приложения</p>
                 </li>
-                <li class="our-work-item">
+                <li class="our-work-list__item">
                     <img src="./images/our-work-2.jpg" alt="Десктопные приложения" width="370">
-                    <p class="our-work-overlay">Мобильные приложения</p>
+                    <p class="our-work__item-overlay">Мобильные приложения</p>
                 </li>
-                <li class="our-work-item">
+                <li class="our-work-list__item">
                     <img src="./images/our-work-3.jpg" alt="Дизайн" width="370">
-                    <p class="our-work-overlay">Дизайнерские решения</p>
+                    <p class="our-work__item-overlay">Дизайнерские решения</p>
                 </li>
             </ul>
             </div>
